<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="3"
    tools:context="com.example.ahmed.androidproject.SignIn">
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_weight="1.5"
    android:background="@drawable/tripplanning"></LinearLayout>

    <LinearLayout
        android:layout_weight="2"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20dp"
            android:text="@string/signin"/>
        <EditText
            android:layout_width="match_parent"
            android:hint="@string/username"
            android:id="@+id/name"
            android:inputType="text"
            android:layout_height="wrap_content" />
        <EditText
            android:layout_width="match_parent"
            android:hint="@string/password"
            android:id="@+id/password"
            android:inputType="textPassword"
            android:layout_height="wrap_content" />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rememberme"
            android:id="@+id/rememberme"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login"
            android:layout_marginTop="50dp"
            android:textColor="#fff"
            android:background="@color/colorPrimaryDark"
            android:text="@string/continu"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="15dp"
            android:textColorHint="#000"
            android:textStyle="italic"
            android:id="@+id/newuser"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/registernow"/>
    </LinearLayout>
</LinearLayout>
